--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.3",
+		"lorem-ipsum": "^2.0.8",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.2.0",
